--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -247,15 +247,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="0dp">
+<!--            <LinearLayout-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="0dp">-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
             <LinearLayout
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp">
 
